quicklog/tests/failures/prefixed_expr_without_name.stderr
error: expected identifier
  --> tests/failures/prefixed_expr_without_name.rs:10:12
   |
10 |     info!(?&x);
   |            ^
